--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type = 'text/css' href="/home.css">
+  <link rel="stylesheet" type = 'text/css' href="/common-style.css">
   <title>Document</title>
 </head>
 <body>
@@ -43,16 +44,16 @@
       </ul>
       <ul>
         <li>
-          <a href="#">HOME</a>
+          <a href="#"><img src="./img/wechat.png"/></a>
         </li>
         <li>
-          <a href="#">HOME</a>
+          <a href="#"><img src="./img/wechat.png"/></a>
         </li>
         <li>
-          <a href="#">HOME</a>
+          <a href="#"><img src="./img/weibo.png"/></a>
         </li>
         <li>
-          <a href="#">HOME</a>
+          <a href="#"><img src="./img/xhs.png"/></a>
         </li>
       </ul>
     </div>
@@ -66,15 +67,15 @@
         </div>
     </section>
     <section class="sophie">
-        <div class="sophie-top-img-container">
-          <img class="sophie-top-img" src="./img/swimming.jpeg">
-        </div>
-        <div class="sophie-content">
-          <h2>Sophie Marceau</h2>
-          <h3>滚滚长江东逝水</h3>
-          <p>滚滚长江东逝水，浪花淘尽英雄。是非成败转头空，青山依旧在，几度夕阳红。白发渔樵江渚上，惯看秋月春风。一壶浊酒喜相逢，古今多少事，都付笑谈中。
-            是非成败转头空，青山依旧在，惯看秋月春风。一壶浊酒喜相逢，古今多少事，滚滚长江东逝水，浪花淘尽英雄。 几度夕阳红。白发渔樵江渚上，都付笑谈中...</p>
-        </div>
+      <div class="sophie-top-img-container">
+        <img class="sophie-top-img" src="./img/swimming.jpeg">
+      </div>
+      <div class="sophie-content">
+        <h2>Sophie Marceau</h2>
+        <h3>滚滚长江东逝水</h3>
+        <p>滚滚长江东逝水，浪花淘尽英雄。是非成败转头空，青山依旧在，几度夕阳红。白发渔樵江渚上，惯看秋月春风。一壶浊酒喜相逢，古今多少事，都付笑谈中。
+          是非成败转头空，青山依旧在，惯看秋月春风。一壶浊酒喜相逢，古今多少事，滚滚长江东逝水，浪花淘尽英雄。 几度夕阳红。白发渔樵江渚上，都付笑谈中...</p>
+    </div>
     </section>
     <section class="sophie">
       <div>
@@ -97,6 +98,7 @@
     </section>
     <section class="trust">
       <h2 class="trust-title">我们相信什么</h2>
+      <img src=""/>
       <div class="trust-box">
         <div class="trust-box_item">
           <img class="trust-box_item-img" src="./img/trust-img1.jpeg"/>
@@ -135,7 +137,7 @@
             <div class="iphone-content_item-qr-content">
               <p>MaFrance商店</p>
               <p>扫一扫立即关注</p>
-              <img />
+              
             </div>
           </div>
         </div>
@@ -181,8 +183,130 @@
           <img src="./img/brand12.png"/>
         </div>
       </div>
-      <div class="brand-button">
-        <p>see all brands</p>
+      <div class="button-big">
+        <button>see all brands</button>
+      </div>
+    </section>
+    <section class="meet">
+      <div class="meet-box-up">
+      </div>
+      <div class="meet-box-bottom">
+        <img src="./img/meet1.png"/>
+        <div class="meet-box-bottom_content">
+          <h2>Meet Lili</h2>
+          <h3>Lili is the friend who will add fun to your shopping experience with MaFrance!</h3>
+          <p>滚滚长江东逝水，浪花淘尽英雄。是非成败转头空，青山依旧在，几度夕阳红。白发渔樵江渚上，惯看秋月春风。一壶浊酒喜相逢，古今多少事，都付笑谈中。</p>
+          <p>是非成败转头空，青山依旧在，惯看秋月春风。一壶浊酒喜相逢，古今多少事，滚滚长江东逝水，浪花淘尽英雄。 几度夕阳红。白发渔樵江渚上，都付笑谈中...</p>
+          <img src="./img/meet2.png"/>
+        </div>
+        <div class="meet-box-bottom_img"></div>
+      </div>
+    </section>
+    <section class="meet-mobile">
+      <div class="meet-mobile-box-bottom">
+      </div>
+      <div class="meet-mobile-box-up">
+        <div class="meet-mobile-box-up_imgs">
+          <img src="./img/meet1.png"/>
+          <img src="./img/meet-mobile-line.png"/>
+          <img src="./img/meet-mobile-qr.png"/>
+        </div>
+        <div class="meet-mobile-box-up_content">
+          <h2>Meet Lili</h2>
+          <h3>Lili is the friend who will add fun to your shopping experience with MaFrance!</h3>
+          <p>滚滚长江东逝水，浪花淘尽英雄。是非成败转头空，青山依旧在，几度夕阳红。白发渔樵江渚上，惯看秋月春风。一壶浊酒喜相逢，古今多少事，都付笑谈中。</p>
+          <p>是非成败转头空，青山依旧在，惯看秋月春风。一壶浊酒喜相逢，古今多少事，滚滚长江东逝水，浪花淘尽英雄。 几度夕阳红。白发渔樵江渚上，都付笑谈中...</p>
+          <img src="./img/meet2.png"/>
+        </div>
+      </div>
+    </section>
+    <section class="news">
+      <h2 class="news-title">消息</h2>
+      <div class="news-content-container">
+        <div class="news-content">
+          <div class="news-content__img">
+            <img src="./img/trust-img1.jpeg"/>
+          </div>
+          <div class="news-content__date">
+            <p>2020-09-15</p>
+          </div>
+          <div class="news-content__title">
+            <p>标题</p>
+          </div>
+          <div class="button-small">
+            Read article
+          </div>
+        </div>
+        <div class="news-content">
+          <div class="news-content__img">
+            <img src="./img/trust-img2.jpeg"/>
+          </div>
+          <div class="news-content__date">
+            <p>2020-09-15</p>
+          </div>
+          <div class="news-content__title">
+            <p>标题</p>
+          </div>
+          <div class="button-small">
+            Read article
+          </div>
+        </div>
+        <div class="news-content">
+          <div class="news-content__img">
+            <img src="./img/trust-img3.jpeg"/>
+          </div>
+          <div class="news-content__date">
+            <p>2020-09-15</p>
+          </div>
+          <div class="news-content__title">
+            <p>标题</p>
+          </div>
+          <div class="button-small">
+            Read article
+          </div>
+        </div>
+        <div class="news-content">
+          <div class="news-content__img">
+            <img src="./img/trust-img4.jpeg"/>
+          </div>
+          <div class="news-content__date">
+            <p>2020-09-15</p>
+          </div>
+          <div class="news-content__title">
+            <p>标题</p>
+          </div>
+          <div class="button-small">
+            Read article
+          </div>
+        </div>
+        <div class="news-content">
+          <div class="news-content__img">
+            <img src="./img/trust-img1.jpeg"/>
+          </div>
+          <div class="news-content__date">
+            <p>2020-09-15</p>
+          </div>
+          <div class="news-content__title">
+            <p>标题</p>
+          </div>
+          <div class="button-small">
+            Read article
+          </div>
+        </div>
+        <div class="news-content">
+        <div class="news-content__img">
+          <img src="./img/trust-img2.jpeg"/>
+        </div>
+        <div class="news-content__date">
+          <p>2020-09-15</p>
+        </div>
+        <div class="news-content__title">
+          <p>标题</p>
+        </div>
+        <div class="button-small">
+          Read article
+        </div>
+        </div>
       </div>
     </section>
   </div>
