--- a/home.html
+++ b/home.html
@@ -9,6 +9,10 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="qr">
+    <img src="./img/qr.png">
+    <p>MaFrance商店</p>
+  </div>
   <header>
     <div class="mobile-menu-container">
       <div class="mobile-menu"></div>
@@ -44,7 +48,7 @@
       </ul>
       <ul>
         <li>
-          <a href="#"><img src="./img/wechat.png"/></a>
+          <a href="#"><img src="./img/stop.png"/></a>
         </li>
         <li>
           <a href="#"><img src="./img/wechat.png"/></a>
@@ -66,9 +70,9 @@
           </h1>
         </div>
     </section>
-    <section class="sophie">
+    <section class="sophie wrapper">
       <div class="sophie-top-img-container">
-        <img class="sophie-top-img" src="./img/swimming.jpeg">
+        <img src="./img/swimming.jpeg">
       </div>
       <div class="sophie-content">
         <h2>Sophie Marceau</h2>
@@ -77,7 +81,7 @@
           是非成败转头空，青山依旧在，惯看秋月春风。一壶浊酒喜相逢，古今多少事，滚滚长江东逝水，浪花淘尽英雄。 几度夕阳红。白发渔樵江渚上，都付笑谈中...</p>
     </div>
     </section>
-    <section class="sophie">
+    <section class="sophie wrapper">
       <div>
         <div class="sophie-left-img-container">
          <div class="sophie-left-img-red">
@@ -96,10 +100,9 @@
         <img src="./img/sophie-right-img.jpeg"/>
       </div>
     </section>
-    <section class="trust">
+    <section class="trust wrapper">
       <h2 class="trust-title">我们相信什么</h2>
-      <img src=""/>
-      <div class="trust-box">
+      <div class="trust-box wrapper-small">
         <div class="trust-box_item">
           <img class="trust-box_item-img" src="./img/trust-img1.jpeg"/>
           <div class="trust-box_item-line"></div>
@@ -123,8 +126,10 @@
           <p class="trust-box_item-content">Processus de vente simplifié et traçable </p>
         </div>
       </div>
+      <img src="./img/line.png" />
     </section>
     <section class="iphone">
+      <div class="swapper">
       <div>
         <img class="iphone-img" src="./img/iphone.png"/>
       </div>
@@ -137,11 +142,12 @@
             <div class="iphone-content_item-qr-content">
               <p>MaFrance商店</p>
               <p>扫一扫立即关注</p>
-              
+              <img src="./img/stop.png"/>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </section>
     <section class="brand">
       <h2>法国制造的50多个品牌</h2>
@@ -187,7 +193,7 @@
         <button>see all brands</button>
       </div>
     </section>
-    <section class="meet">
+    <section class="meet wrapper-small">
       <div class="meet-box-up">
       </div>
       <div class="meet-box-bottom">
@@ -222,93 +228,166 @@
     </section>
     <section class="news">
       <h2 class="news-title">消息</h2>
-      <div class="news-content-container">
+      <div class="news-content-container wrapper-small">
         <div class="news-content">
-          <div class="news-content__img">
-            <img src="./img/trust-img1.jpeg"/>
+          <div class="img-container">
+            <img src="./img/news1.jpeg"/>
           </div>
-          <div class="news-content__date">
-            <p>2020-09-15</p>
-          </div>
-          <div class="news-content__title">
-            <p>标题</p>
-          </div>
-          <div class="button-small">
-            Read article
-          </div>
-        </div>
-        <div class="news-content">
-          <div class="news-content__img">
-            <img src="./img/trust-img2.jpeg"/>
-          </div>
-          <div class="news-content__date">
-            <p>2020-09-15</p>
-          </div>
-          <div class="news-content__title">
-            <p>标题</p>
-          </div>
-          <div class="button-small">
-            Read article
-          </div>
-        </div>
-        <div class="news-content">
-          <div class="news-content__img">
-            <img src="./img/trust-img3.jpeg"/>
-          </div>
-          <div class="news-content__date">
-            <p>2020-09-15</p>
-          </div>
-          <div class="news-content__title">
-            <p>标题</p>
-          </div>
-          <div class="button-small">
-            Read article
-          </div>
-        </div>
-        <div class="news-content">
-          <div class="news-content__img">
-            <img src="./img/trust-img4.jpeg"/>
-          </div>
-          <div class="news-content__date">
-            <p>2020-09-15</p>
-          </div>
-          <div class="news-content__title">
-            <p>标题</p>
-          </div>
-          <div class="button-small">
-            Read article
-          </div>
-        </div>
-        <div class="news-content">
-          <div class="news-content__img">
-            <img src="./img/trust-img1.jpeg"/>
-          </div>
-          <div class="news-content__date">
-            <p>2020-09-15</p>
-          </div>
-          <div class="news-content__title">
-            <p>标题</p>
-          </div>
-          <div class="button-small">
-            Read article
-          </div>
-        </div>
-        <div class="news-content">
-        <div class="news-content__img">
-          <img src="./img/trust-img2.jpeg"/>
-        </div>
-        <div class="news-content__date">
           <p>2020-09-15</p>
-        </div>
-        <div class="news-content__title">
           <p>标题</p>
+          <div class="button-small">
+            <button>Read article</button>
+          </div>
         </div>
-        <div class="button-small">
-          Read article
+        <div class="news-content">
+          <div class="img-container">
+            <img src="./img/news2.jpeg"/>
+          </div>
+          <p>2020-09-15</p>
+          <p>标题</p>
+          <div class="button-small">
+            <button>Read article</button>
+          </div>
         </div>
+        <div class="news-content">
+          <div class="img-container">
+            <img src="./img/news3.jpeg"/>
+          </div>
+          <p>2020-09-15</p>
+          <p>标题</p>
+          <div class="button-small">
+            <button>Read article</button>
+          </div>
+        </div>
+        <div class="news-content">
+          <div class="img-container">
+          <img src="./img/news4.jpeg"/>
+          </div>
+          <p>2020-09-15</p>
+          <p>标题</p>
+          <div class="button-small">
+            <button>Read article</button>
+          </div>
+        </div>
+        <div class="news-content">
+          <div class="img-container">
+            <img src="./img/news5.jpeg"/>
+          </div>
+          <p>2020-09-15</p>
+          <p>标题</p>
+          <div class="button-small">
+            <button>Read article</button>
+          </div>
+        </div>
+        <div class="news-content">
+            <h3>发现所有新闻</h3>
+            <p>Actualités Ma France</p>
+            <p>Actualités Partners</p>
+            <p>Press</p>
+            <div class="button-small">
+              <button>All news</button>
+            </div>
         </div>
       </div>
     </section>
+    <section class="contact wrapper">
+      <div class="contact-container">
+        <div class="contact-left">
+          <h3>
+            联系我们
+          </h3>
+          <p>
+            滚滚长江东逝水，浪花淘尽英雄。是非成败转头空，青山依旧在，几度夕阳红。白发渔樵江渚上，惯看秋月春风。一壶浊酒喜相逢，古今多少事，都付笑谈中。
+          </p>
+          <img src="./img/contact-line.png"/>
+        </div class="contact-right">
+          <form>
+            <div class="contact-right_form-name input-margin">
+              <input type="text" placeholder="名字"/>
+              <input type="text" placeholder="姓"/>
+            </div>
+            <div class="contact-right_form-mail input-margin">
+              <input type="text" placeholder="Mail"/>
+            </div>
+            <div class="contact-right_form-phone input-margin">
+              <input type="number" placeholder="Phone-number"/>
+            </div>
+            <div class="contact-right_form-server input-margin">
+              <input type="text" placeholder="Customer"/>
+            </div>
+            <div class="contact-right_form-message input-margin">
+              <input type="text" name="fname" placeholder="Message"/>
+            </div>
+            <div class="button-big">
+              <button>Send</button>
+            </div>
+          </form>
+        <div>
+      </div>
+      </div>
+    </section>
+    <section class="menu-bottom ">
+      <div class="menu-bottom-container">
+        <div class="menu-bottom-img">
+            <img src="./img/logo.png"/>
+        </div>
+        <div class="menu-middle">
+          <ul>
+            <li>
+              <a href="#">首页</a>
+            </li>
+            <li>
+              <a href="#">品牌</a>
+            </li>
+            <li>
+              <a href="#">伙伴</a>
+            </li>
+            <li>
+              <a href="#">消息</a>
+            </li>
+            <li>
+              <a href="#">关于我们</a>
+            </li>
+            <li>
+              <a href="#">联系我们</a>
+            </li>
+          </ul>
+        </div>
+        <div class="menu-end">
+          <ul>
+            <li>
+              <a href="#"><img src="./img/stop.png"/></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/wechat.png"/></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/weibo.png"/></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/xhs.png"/></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <footer class="footer wrapper">
+      <div class="footer-container">
+        <div class="footer-item">
+          <p>上海地址</p>
+          <p>香港中路38号阳光百货</p>
+        </div>
+        <div class="footer-item">
+          <p>杭州地址</p>
+          <p>香港中路38号阳光百货</p>
+        </div>
+        <div class="footer-item">
+          <p>巴黎地址</p>
+          <p>Station F - 5, parvis Alan-Turing, Paris, France</p>
+        </div>
+      </div>
+    </footer>
+
   </div>
 </body>
 </html>
